[package]
edition.workspace = true
name              = "chelix-matrix"
version.workspace = true

[dependencies]
async-trait     = { workspace = true }
base64          = { workspace = true }
futures         = { workspace = true }
matrix-sdk      = { workspace = true }
chelix-channels = { workspace = true }
chelix-common   = { workspace = true }
chelix-config   = { workspace = true }
chelix-metrics  = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
time            = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { features = ["test-util"], workspace = true }

[lints]
workspace = true
