[package]
edition.workspace = true
name              = "chelix-media"
version.workspace = true

[dependencies]
chelix-common  = { workspace = true }
chelix-metrics = { optional = true, workspace = true }
image          = { workspace = true }
mime_guess     = { workspace = true }
reqwest        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[lints]
workspace = true
