[package]
edition.workspace = true
name              = "chelix-node-host"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:chelix-metrics"]

[dependencies]
base64            = { workspace = true }
chelix-config     = { workspace = true }
chelix-metrics    = { optional = true, workspace = true }
chelix-protocol   = { workspace = true }
ed25519-dalek     = { workspace = true }
futures           = { workspace = true }
rand              = { workspace = true }
reqwest           = { workspace = true }
rustls            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sha2              = { workspace = true }
sysinfo           = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { features = ["rustls-tls-webpki-roots"], workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }
uuid              = { workspace = true }
which             = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
