[package]
edition.workspace = true
name              = "chelix-nostr"
version.workspace = true

[dependencies]
async-trait     = { workspace = true }
chelix-channels = { workspace = true }
chelix-common   = { workspace = true }
chelix-config   = { workspace = true }
chelix-metrics  = { optional = true, workspace = true }
nostr-sdk       = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
time            = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
