[package]
edition.workspace = true
name              = "chelix-oauth"
version.workspace = true

[dependencies]
axum           = { workspace = true }
base64         = { workspace = true }
chelix-common  = { workspace = true }
chelix-config  = { workspace = true }
chelix-metrics = { optional = true, workspace = true }
rand           = { workspace = true }
reqwest        = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:chelix-metrics"]

[dev-dependencies]
mockito  = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
